Added put method for calendar and area, and getAll for users
