# routes/area.js
@@ -20,6 +20,12 @@ router.get('/:areaId',
 // #swagger.description = 'Get an area by ID'
     controller.findOne);
 
+// update area
+router.put('/:areaId', 
+// #swagger.tags = ['Areas']
+// #swagger.description = 'Update an area by ID'
+    controller.update);
+
 // delete area
 router.delete('/:areaId', 
 // #swagger.tags = ['Areas']
